# rust_game

./: Cargo.toml  player1.yaml  player2.yaml
crates/ecs/: Cargo.toml
crates/ecs/ecs_derive/: Cargo.toml
crates/ecs/ecs_derive/src/: lib.rs
crates/ecs/src/: event_queue.rs  events.rs  lib.rs
crates/events/src/: lib.rs
src/: ai_manager.rs  bounds.rs  collider2d.rs  draw_instance.rs  fire_system.rs  game.rs  gl_wrappers.rs  level.rs  main.rs  map.rs  object_components.rs  player_config.rs  quad_tree.rs  render.rs  sprite.rs  transform.rs  world.rs
src/system/: ai_system.rs  fire_system.rs  mod.rs  move_system.rs  system_trait.rs
