[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
glfw="0.52.0"
gl="0.14.0"
nalgebra-glm = "0.18.0"
image="0.24.2"
ecs = { path="./crates/ecs" }
ecs_derive = { path="./crates/ecs/ecs_derive" }