[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.9.0"
glfw="0.59.0"
gl="0.14.0"
nalgebra-glm = "0.19.0"
image="0.25.6"
yaml-rust2 = "0.10.1"
strum = "0.27.1"
strum_macros = "0.27.1"
fxhash="0.2.1"
ecs = { path="./crates/ecs" }
ecs_derive = { path="./crates/ecs/ecs_derive" }